Falta trocar palleta de cores

--- a/rams_app/templates/rams_app/pages/index.html
+++ b/rams_app/templates/rams_app/pages/index.html
@@ -21,41 +21,89 @@
                         <div class="bg-secondary rounded d-flex align-items-center justify-content-between p-4">
                             <!--i class="fa fa-chart-line fa-3x text-primary"></i-->
                             <i class="fa-solid fa-temperature-half fa-3x text-primary"></i>
-                            <h4 class="mb-0">Chiller</h6>
+                            <h6 class="mb-0">Chiller out</h6>
                             <div class="ms-3">
-                                <p class="mb-2">T<sub>set</sub>=20<code>&deg;</code>C</p>
-                                <h6 class="mb-0">T=20<code style="color: white;">&deg;</code>C</h6>
+                                <h6 class="mb-2">T<sub>set</sub>=20<code style="color: white;">&deg;</code>C</h6>
+                                <h6 class="mb-2">T=20<code style="color: white;">&deg;</code>C</h6>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-xl-3">
                         <div class="bg-secondary rounded d-flex align-items-center justify-content-between p-4">
-                            <i class="fa fa-chart-bar fa-3x text-primary"></i>
+                            <!--i class="fa fa-chart-line fa-3x text-primary"></i-->
+                            <i class="fa-solid fa-temperature-half fa-3x text-primary"></i>
+                            <h6 class="mb-0">Left Mag Temperature</h6>
                             <div class="ms-3">
-                                <p class="mb-2">Total Sale</p>
-                                <h6 class="mb-0">$1234</h6>
+                                <h6 class="mb-2">T<sub>set</sub>=20<code style="color: white;">&deg;</code>C</h6>
+                                <h6 class="mb-2">T=20<code style="color: white;">&deg;</code>C</h6>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-xl-3">
                         <div class="bg-secondary rounded d-flex align-items-center justify-content-between p-4">
-                            <i class="fa fa-chart-area fa-3x text-primary"></i>
+                            <!--i class="fa fa-chart-line fa-3x text-primary"></i-->
+                            <i class="fa-solid fa-temperature-half fa-3x text-primary"></i>
+                            <h6 class="mb-0">Right Mag Temperature</h6>
                             <div class="ms-3">
-                                <p class="mb-2">Today Revenue</p>
-                                <h6 class="mb-0">$1234</h6>
+                                <h6 class="mb-2">T<sub>set</sub>=20<code style="color: white;">&deg;</code>C</h6>
+                                <h6 class="mb-2">T=20<code style="color: white;">&deg;</code>C</h6>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-xl-3">
                         <div class="bg-secondary rounded d-flex align-items-center justify-content-between p-4">
-                            <i class="fa fa-chart-pie fa-3x text-primary"></i>
+                            <!--i class="fa fa-chart-line fa-3x text-primary"></i-->
+                            <i class="fa-solid fa-temperature-half fa-3x text-primary"></i>
+                            <h6 class="mb-0">Left Mag flow</h6>
                             <div class="ms-3">
-                                <p class="mb-2">Total Revenue</p>
-                                <h6 class="mb-0">$1234</h6>
+                                <h6 class="mb-2">T<sub>set</sub>=2.0 l/min</h6>
+                                <h6 class="mb-2">T=20<code style="color: white;">&deg;</code>C</h6>
                             </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-xl-3">
+                        <div class="bg-secondary rounded d-flex align-items-center justify-content-between p-4">
+                            <!--i class="fa fa-chart-line fa-3x text-primary"></i-->
+                            <i class="fa-solid fa-temperature-half fa-3x text-primary"></i>
+                            <h6 class="mb-0">Right Mag flow</h6>
+                            <div class="ms-3">
+                                <h6 class="mb-2">T<sub>set</sub>=2.0 l/min</h6>
+                                <h6 class="mb-2">T=20<code style="color: white;">&deg;</code>C</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-xl-3">
+                        <div class="bg-secondary rounded d-flex align-items-center justify-content-between p-4">
+                            <!--i class="fa fa-chart-line fa-3x text-primary"></i-->
+                            <i class="fa-solid fa-temperature-half fa-3x text-primary"></i>
+                            <h6 class="mb-0">Right Mag flow</h6>
+                            <div class="ms-3">
+                                <h6 class="mb-2">T<sub>set</sub>=2.0 l/min</h6>
+                                <h6 class="mb-2">T=20<code style="color: white;">&deg;</code>C</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-xl-6">
+                        <div class="bg-secondary text-center rounded p-4">
+                            <div class="d-flex align-items-center justify-content-between mb-4">
+                                <h6 class="mb-0">Worldwide Sales</h6>
+                                <a href="">Show All</a>
+                            </div>
+                            <canvas id="worldwide-sales"></canvas>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-xl-6">
+                        <div class="bg-secondary text-center rounded p-4">
+                            <div class="d-flex align-items-center justify-content-between mb-4">
+                                <h6 class="mb-0">Salse & Revenue</h6>
+                                <a href="">Show All</a>
+                            </div>
+                            <canvas id="salse-revenue"></canvas>
                         </div>
                     </div>
                 </div>
+
+                
             </div>
             <!-- Sale & Revenue End -->
 
