--- a/rams_app/templates/rams_app/partials/sidebar.html
+++ b/rams_app/templates/rams_app/partials/sidebar.html
@@ -3,8 +3,8 @@
         <div class="sidebar pe-4 pb-3">
             <nav class="navbar bg-secondary navbar-dark">
                 <a href="index.html" class="navbar-brand mx-4 mb-3">
-                    <h3 class="text-primary">
-                        <img class="rounded-circle" src="{% static 'rams_app/img/logo.png'%}" alt="" style="width: 40px; height: 40px;"> RAMS II
+                    <h3 class="text-primary text-center">
+                        <img class="rounded-circle" src="{% static 'rams_app/img/logo.png'%}" alt="" style="width: 60px; height: 60px;"> RAMS II
                     </h3>
                 </a>
                 <div class="d-flex align-items-center ms-4 mb-4">
